--- a/.well-known/.htaccess
+++ b/.well-known/.htaccess
@@ -1,1 +1,3 @@
-RewriteEngine Off
+# Remove . file extension - e.g. https://example.com/file.html will become https://example.com/file
+RewriteEngine on 
+RewriteRule ^(.*)$ $1 [NC,L]
