--- a/.well-known/.htaccess
+++ b/.well-known/.htaccess
@@ -1,3 +1,2 @@
-# Remove . file extension - e.g. https://example.com/file.html will become https://example.com/file
-RewriteEngine on 
-RewriteRule ^(.*)$ $1 [NC,L]
+RewriteEngine On
+RewriteRule ^ - [L]
